# runnable

./: .coveragerc  .dockerignore  .gitignore  .mypy.ini  .pre-commit-config.yaml  .pylintrc  404.html  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  all_params.html  argo-pipeline.yaml  binary-agnesi-1634_timeline.html  braised-haibt-1358_timeline.html  clever-pasteur-1356_timeline.html  cold-pasteur-1352_timeline.html  compact_params.html  debug_lazy_carson.html  debug_scroll.html  debug_tooltips.html  df.csv  dyadic-mestorf-1342_timeline.html  expandable_metadata.html  expandable_simple.html  fixed_lazy_carson.html  flat-brattain-1630_timeline.html  index.html  integration-test-results.txt  isomorphic-pasteur-1352_timeline.html  milky-engelbart-1353_timeline.html  mkdocs.yml  new-lichterman-1635_timeline.html  objects.inv  orthogonal-murdock-1703_timeline.html  parameter_test.html  prompt.md  pyproject.toml  quick_test.html  rank-visvesvaraya-1351_timeline.html  (+15 more)
.claude/: settings.json
.claude/commands/: docster.md  tutor.md  viz.md
.github/workflows/: docs.yaml  force-pypi.yaml  pr.yaml  release.yaml
advanced-patterns/async-streaming/: index.html
advanced-patterns/conditional-workflows/: index.html
advanced-patterns/failure-handling/: index.html
advanced-patterns/loop-patterns/: index.html
advanced-patterns/map-patterns/: index.html
advanced-patterns/mocking-testing/: index.html
advanced-patterns/node-types/: index.html
advanced-patterns/parallel-execution/: index.html
advanced-patterns/retry-recovery/: index.html
architecture/context-isolation/: index.html
architecture/yaml/: index.html
compare/kedro/: index.html
compare/metaflow/: index.html
comparisons/kedro/: index.html
comparisons/metaflow/: index.html
concepts/: index.html
concepts/catalog/: index.html
concepts/dag/: index.html
concepts/executor/: index.html
concepts/experiment-tracking/: index.html
concepts/job_intro/: index.html
concepts/map/: index.html
concepts/nesting/: index.html
concepts/parallel/: index.html
concepts/parameters/: index.html
concepts/pipeline/: index.html
concepts/pipeline_intro/: index.html
concepts/run-log/: index.html
concepts/secrets/: index.html
concepts/task/: index.html
configurations/catalog/: index.html
configurations/experiment-tracking/: index.html
configurations/overview/: index.html
configurations/run-log/: index.html
configurations/secrets/: index.html
docs/: RELEASES.md  cli.md  command-line.md  comparison-notes.md  example.md  examples.md  extensions.md  generate.md  get-started.md  hash-optimization.md  how-do-i.md  index.md  installation.md  interactions.md  iterative.md  notebook-execution.md  reference.md  roadmap.md  sdk.md  usage.md  why-magnus.md  why-runnable.md  yaml.md
docs/advanced-patterns/: async-streaming.md  failure-handling.md  loop-patterns.md  mocking-testing.md  node-types.md  parallel-execution.md  retry-recovery.md
docs/architecture/: context-isolation.md
docs/compare/: kedro.md  metaflow.md
docs/comparisons/: kedro.md
docs/concepts/: catalog.md  command-types.md  conditional.md  dag.md  executor.md  experiment-tracker.md  experiment-tracking.md  index.md  integration.md  job_intro.md  map.md  modes.md  nesting.md  nodes.md  parallel.md  parameters.md  pipeline.md  pipeline_intro.md  run-log.md  secrets.md  stub.md  task.md  the-big-picture.md
docs/concepts_old/: command-types.md  dag.md  run-log.md  secrets.md
docs/configurations/: catalog.md  executor.md  overview.md  run-log.md  secrets.md
docs/css/: extra.css
docs/example/: dataflow.md  example.md  experiment-tracking.md  reproducibility.md  retry-after-failure.md  secrets.md  steps.md
docs/extensions/: extensions.md
docs/getting-started/: connecting-functions.md  handling-data.md  your-first-function.md
docs/getting_started/: brief-concepts-input.md  brief-concepts-output.md  command-line.md  example-deployment.md  example.md  installation.md  what-next.md  why-magnus.md  wrap-up.md
docs/jobs/: file-storage.md  first-job.md  index.md  job-types.md  (+2 more)
example/: default-fail.yaml  functions.py  getting-started-fail.yaml  getting-started-logging.yaml  getting-started-mock.yaml  getting-started-python.yaml  logging.yaml  mocking.yaml  on-failure.yaml
examples/: Dockerfile  Dockerfile.39  README.md  catalog.py  catalog.yaml  catalog_api.py  catalog_simple.py  contrived.py  contrived.yaml  default-fail.yaml  experiment_tracking_api.py  experiment_tracking_env.yaml  functions.py  generated-argo-pipeline.yaml  iris_demo.py  logging.yaml  mocking.py  mocking.yaml  on-failure.yaml  on_failure.py  parallel-fail.yaml  parallel.yaml  parameters.py  parameters_api.py  parameters_env.yaml  parameters_flow.yaml  parameters_initial.yaml  parameters_simple.py  python-tasks-argo.py  python-tasks.py  python-tasks.yaml  python_tasks.py  retry-fail.yaml  retry-fixed.yaml  secrets.env  secrets.py  secrets_env.py
hash-optimization/: index.html
iterative/: index.html
jobs/: index.html
magnus/: __init__.py  catalog.py  cli.py  context.py  datastore.py  defaults.py  docker_utils.py  entrypoints.py  exceptions.py  executor.py  experiment_tracker.py  graph.py  integration.py  interaction.py  log_config.ini  names.py  node_spec.yaml  nodes.py  parameters.py  pickler.py  pipeline.py  sdk.py  secrets.py  tasks.py  utils.py
reference/: index.html
roadmap/: index.html
runnable/: __init__.py  catalog.py  cli.py  context.py  datastore.py  defaults.py  entrypoints.py  exceptions.py  executor.py  experiment_tracker.py  gantt.py  graph.py  integration.py  interaction.py  jobs.py  names.py  nodes.py  parameters.py  pickler.py  sdk.py  secrets.py  tasks.py  telemetry.py  utils.py  viz.py  viz_simple.py
scripts/: update_version.py
sdk/: index.html
search/: search_index.json
tests/: __init__.py  assertions.py  conftest.py  test_examples.py  test_job_examples.py  test_pipeline_examples.py  test_retries.py
tutorial/: index.html
usage/: index.html
visualization/: main.py  pyproject.toml
why-runnable/: index.html
(+778 files in other folders)
